# RAGNav

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: __init__.py  _runner.py  citation_eval.py  cuad_benchmark.py  entity_eval.py  entity_eval_excerpt.py  offline_smoke.py  paper_eval.py  paper_pdf_suite.py  regression.py  scorecard.py  security_eval.py  smoke_markdown.py  squad_benchmark.py
benchmarks/results/: cuad_results.txt  squad_results.txt
cookbook/: ragnav_agentic_retrieval.ipynb  ragnav_paper_quickstart.ipynb  ragnav_quickstart.ipynb  ragnav_vectorless_rag.ipynb
examples/: README.md
examples/agentic/: ragnav_agentic_retrieval.py  ragnav_agentic_retrieval_pdf.py
examples/basic/: ragnav_cuad_retrieval.py  ragnav_rag_simple.py  ragnav_squad_retrieval.py
examples/graphs/: ragnav_chat_graph_retrieval.py  ragnav_entity_graphrag_pdf.py
examples/multidoc/: ragnav_doc_search_description.py  ragnav_doc_search_metadata.py  ragnav_doc_search_semantics.py
examples/papers/: ragnav_paper_rag_pdf.py  ragnav_vectorless_rag_pdf.py
ragnav/: __init__.py  cli.py  cost.py  display.py  env.py  exceptions.py  graph.py  json_utils.py  models.py  net.py  observability.py  retrieval.py  utils.py
ragnav/answering/: __init__.py  inline_citations.py
ragnav/cache/: __init__.py  sqlite_cache.py
ragnav/eval/: __init__.py  cases.py  metrics.py
ragnav/graphrag/: __init__.py  entities.py  extract.py  graph.py  lexicon.py  retriever.py
ragnav/index/: __init__.py  bm25.py  vectors.py
ragnav/ingest/: __init__.py  chat.py  email.py  html.py  legal.py  markdown.py  pdf.py
ragnav/llm/: __init__.py  base.py  fake.py  instrumented.py  mistral.py
ragnav/papers/: __init__.py  pdf_heuristics.py  rag.py
ragnav/pipelines/: __init__.py  agentic.py  agentic_pdf.py  hybrid.py  vectorless.py
ragnav/reranking/: cross_encoder.py
ragnav/retrieval/: __init__.py  _helpers.py  fallback.py  index.py  retriever.py  routing.py  tree_search.py
ragnav/security/: __init__.py  policy.py
scripts/: gen_architecture.py  generate_architecture_diagram.py
tests/: conftest.py
tests/integration/: test_placeholder.py
tests/unit/: test_agentic.py  test_block_graph.py  test_bm25_index.py  test_cache.py  test_cost.py  test_display.py  test_env.py  test_eval_metrics.py  test_fallback.py  test_graphrag.py  test_graphrag_extract.py  test_helpers_extended.py  test_index_build.py  test_ingest_legal.py  test_ingest_markdown.py  test_ingest_messy.py  test_inline_citations.py  test_json_utils.py  test_llm_clients.py  test_models.py  test_net.py  test_observability.py  test_pdf_heuristics.py  test_pipelines.py  test_reranking.py  test_retrieval.py  test_retriever_extended.py  test_routing.py  test_security.py  test_tree_search_extended.py  test_vector_index.py  test_vectors_offline.py
